--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-#+TITLE: roidm | GitHub Profile
+#+TITLE: GitHub Profile
 #+AUTHOR: roidm
 #+EMAIL: roidm@protonmail.com
 #+OPTIONS: toc:nil num:nil
@@ -21,20 +21,6 @@
 | [[https://www.kernel.org/][🐧]] | [[https://www.gnu.org/software/emacs/][✎]] | [[https://www.python.org/][🐍]] | [[https://www.rust-lang.org/][🦀]] | [[https://www.lua.org/][🌙]] | [[https://git-scm.com/][🌿]] |
 #+end_center
 
-** 📊 GitHub Stats
-#+begin_center
-[[https://github-readme-stats.vercel.app/api?username=roidm&show_icons=true&theme=gruvbox&include_all_commits=true&count_private=true][GitHub Stats]]
-#+end_center
-
-** #+begin_center
-[[https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black][Linux]]
-[[https://img.shields.io/badge/Emacs-7F5AB6?style=for-the-badge&logo=gnu-emacs&logoColor=white][Emacs]]
-[[https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white][Rust]]
-#+end_center
-
-** #+begin_center
-[[https://github-readme-stats.vercel.app/api/top-langs/?username=roidm&layout=compact&theme=gruvbox][Top Languages]]
-#+end_center
 
 ** 📌 Featured Projects
 1. [[https://github.com/roidm/linux-config][My Linux Config]]: Personal dotfiles for Arch Linux + i3wm
