--- a/README.org
+++ b/README.org
@@ -10,6 +10,13 @@
 - Devoted [[https://www.gnu.org/software/emacs/][Emacs]] user and Unix philosophy believer
 - Specialized in [[https://www.python.org/][Python]], [[https://www.rust-lang.org/][Rust]], and [[https://www.lua.org/][Lua]] development
 
+** 🏆 Badges & Skills
+#+begin_center
+| Emacs | Open Source | Linux | Rust | Python | Lua |
+|-------+-------------+-------+------+--------+-----|
+| [[https://img.shields.io/badge/Emacs-7F5AB6?style=for-the-badge&logo=gnu-emacs&logoColor=white][Emacs]] | [[https://img.shields.io/badge/Open%20Source-1f8b6c?style=for-the-badge&logo=opensource&logoColor=white][Open Source]] | [[https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black][Linux]] | [[https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white][Rust]] | [[https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white][Python]] | [[https://img.shields.io/badge/Lua-2C2D72?style=for-the-badge&logo=lua&logoColor=white][Lua]] |
+#+end_center
+
 ** 🌐 Connect with Me
 - GitHub: [[https://github.com/roidm][@roidm]]
 - Mastodon: [[https://fosstodon.org/@roidm][@roidm@fosstodon.org]]
