--- a/README.org
+++ b/README.org
@@ -11,14 +11,18 @@
 - Specialized in [[https://www.python.org/][Python]], [[https://www.rust-lang.org/][Rust]], and [[https://www.lua.org/][Lua]] development
 
 ** 🏆 Badges & Skills
-#+begin_center
-[[https://img.shields.io/badge/Emacs-7F5AB6?style=for-the-badge&logo=gnu-emacs&logoColor=white]]
-[[https://img.shields.io/badge/Open%20Source-1f8b6c?style=for-the-badge&logo=opensource&logoColor=white]]
-[[https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black]]
-[[https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white]]
-[[https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white]]
-[[https://img.shields.io/badge/Lua-2C2D72?style=for-the-badge&logo=lua&logoColor=white]]
-#+end_center
+#+HTML: <div align="center">
+#+HTML: <table>
+#+HTML: <tr>
+#+HTML: <td><a href="https://www.gnu.org/software/emacs/"><img src="https://img.shields.io/badge/Emacs-7F5AB6?style=for-the-badge&logo=gnu-emacs&logoColor=white" alt="Emacs"></a></td>
+#+HTML: <td><a href="https://opensource.org/"><img src="https://img.shields.io/badge/Open%20Source-1f8b6c?style=for-the-badge&logo=opensource&logoColor=white" alt="Open Source"></a></td>
+#+HTML: <td><a href="https://www.kernel.org/"><img src="https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black" alt="Linux"></a></td>
+#+HTML: <td><a href="https://www.rust-lang.org/"><img src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white" alt="Rust"></a></td>
+#+HTML: <td><a href="https://www.python.org/"><img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python"></a></td>
+#+HTML: <td><a href="https://www.lua.org/"><img src="https://img.shields.io/badge/Lua-2C2D72?style=for-the-badge&logo=lua&logoColor=white" alt="Lua"></a></td>
+#+HTML: </tr>
+#+HTML: </table>
+#+HTML: </div>
 
 ** 🌐 Connect with Me
 - GitHub: [[https://github.com/roidm][@roidm]]
